fix: remove margin: 0 auto - center alignment in titles

--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -3,6 +3,6 @@
   font-weight: 400;
   line-height: 1.1;
   max-width: 500px;
-  margin: 0 auto;
+  margin: 0;
   text-align: center;
 }
