--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -2,7 +2,7 @@
   font-size: 36px;
   font-weight: 600;
   line-height: 1.2;
-  margin: 0 auto;
+  margin: 0;
   margin-bottom: 25px;
   text-align: center;
   max-width: 500px;
